<resources>
    <string name="app_name">PIzzeria</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="jellapeno">Jellapeno</string>
    <string name="build_pizza">BUILD PIZZA</string>
    <string name="your_orders">YOUR ORDERS</string>
    <string name="choose_your_bread">Choose your Bread</string>
    <string name="regular">Regular</string>
    <string name="thin_crust">Thin Crust</string>
    <string name="thick_crust">Thick Crust</string>
    <string name="choose_your_sauce">Choose your Sauce</string>
    <string name="bbq">BBQ</string>
    <string name="creamy_garlic">Creamy Garlic</string>
    <string name="pesto">Pesto</string>
    <string name="italian_tomato">Italian Tomato</string>
    <string name="choose_your_cheese">Choose your Cheese</string>
    <string name="no_cheese">No Cheese</string>
    <string name="mozzarella">Mozzarella</string>
    <string name="parmesan">Parmesan</string>
    <string name="cheddar">Cheddar</string>
    <string name="choose_your_toppings">Choose your Toppings</string>
    <string name="chicken">Chicken</string>
    <string name="beef">Beef</string>
    <string name="onion">Onion</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="mushroom">Mushroom</string>
    <string name="capsicum">Capsicum</string>
    <string name="tomato">Tomato</string>
    <string name="extra_cheese">Extra Cheese</string>
    <string name="amount">Amount</string>
    <string name="edit">Edit</string>
    <string name="reorder">Reorder</string>
    <string name="order">ORDER</string>
</resources>